Tue Apr 14 17:38:19 UTC 2009  James H. Hill  <hillj@isis.vanderbilt.edu>

        * bin/capi/ExecutionManager.bat:
        * bin/capi/ExecutionManager.sh:
        * bin/capi/NodeManager.bat:
        * bin/capi/NodeManager.sh:
        * bin/capi/PlanLauncher.bat:
        * bin/capi/PlanLauncher.sh:
        * bin/capi/RegisterMioType.sh:
        * bin/capi/SingleProcess.bat:
        * bin/capi/SingleProcess.sh:

          . Updated the classpath to contain the new name for the
            CUTS CAPI jarfile.

Tue Apr 14 17:33:12 UTC 2009  James H. Hill  <hillj@isis.vanderbilt.edu>

        * bin/capi:

          . Changed the name of the directory to be in sync with the
            runtime architecture's directory.

        * bin/jbi:
        * bin/jbi/ExecutionManager.bat:
        * bin/jbi/ExecutionManager.sh:
        * bin/jbi/NameService.bat:
        * bin/jbi/NameService.sh:
        * bin/jbi/NodeManager.bat:
        * bin/jbi/NodeManager.sh:
        * bin/jbi/PlanLauncher.bat:
        * bin/jbi/PlanLauncher.sh:
        * bin/jbi/RegisterMioType.sh:
        * bin/jbi/SingleProcess.bat:
        * bin/jbi/SingleProcess.sh:

          Removed these files.

Tue Apr 14 17:29:15 UTC 2009  James H. Hill  <hillj@isis.vanderbilt.edu>

        * cuts/arch/capi:
        * cuts/arch/capi/cuts:
        * cuts/arch/capi/cuts.java.jbi.build:
        * cuts/arch/capi/cuts/jbi:
        * cuts/arch/capi/cuts/jbi/JbiShutdownInterface.java:
        * cuts/arch/capi/cuts/jbi/JbiShutdownThread.java:
        * cuts/arch/capi/cuts/jbi/client/JbiClient.java:
        * cuts/arch/capi/cuts/jbi/client/JbiEvent.java:
        * cuts/arch/capi/cuts/jbi/client/JbiPort.java:
        * cuts/arch/capi/cuts/jbi/client/JbiSink.java:
        * cuts/arch/capi/cuts/jbi/client/JbiSource.java:
        * cuts/arch/capi/cuts/jbi/deployment/ApplicationProcessImpl.java:
        * cuts/arch/capi/cuts/jbi/deployment/ApplicationProcessManagerImpl.java: