@@ -1,3 +1,12 @@
+Tue Apr 14 18:34:55 UTC 2009  James H. Hill  <hillj@isis.vanderbilt.edu>
+
+        * cuts/arch/capi/cuts.java.jbi.build:
+        * cuts/arch/capi/cuts/jbi/client/JbiClient.java:
+        * cuts/arch/capi/cuts/jbi/client/JbiSink.java:
+
+          . Added support for changing the predicate at runtime, i.e.,
+            after the client has been activated.
+
 Tue Apr 14 17:38:19 UTC 2009  James H. Hill  <hillj@isis.vanderbilt.edu>
 
         * bin/capi/ExecutionManager.bat:
